--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -12,7 +12,7 @@
     --popover-foreground: #020817;
     --primary: #6BADEE;
     --primary-foreground: #f8fafc;
-    --secondary: #f1f5f9;
+    --secondary: #F2F2F2;
     --secondary-foreground: #1e293b;
     --muted: #f1f5f9;
     --muted-foreground: #64748b;
